--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main id="vueContainer">
     <h1>{{message}}</h1>
+    <h2>ciao fra</h2>
     <img v-for="img in images" v-bind:src="img"/>
 
     </main>
